--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles.css">
     <title>To-Do List</title>
 </head>
-<p class="copyright-text">Copyright ©️ V.S.Sanjana</p>
+<p class="copyright-text">Copyright ©️ Akula Hima Sri</p>
 <body>
 
     <header>
